fix font-size z-index

--- a/scripts/KGfes.css
+++ b/scripts/KGfes.css
@@ -14,13 +14,31 @@
 @import "https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap";
 
 /*  標準設定 */
-*{
-	font-family: 'Kosugi Maru', sans-serif;
+body{
+    background: var(--z-preset-checker-blue);
+    font-family: 'Kosugi Maru', sans-serif;
     font-size:  16px;
+	color: var(--z-fontcolor);
+}
+body *{
     line-height:    1.5;
     box-sizing: border-box;
     z-index:    1;
 }
+
+body,
+div#container {
+	padding: 0;
+	margin: 0;
+	text-align: center;
+}
+
+/*  z-index
+    本文        1
+    .zHead      5
+    ヘッダー    100
+*/
+
 
 
 /* 変数設定 */
@@ -37,19 +55,6 @@
     --z-ele-fontcolor-alt:  #113;
 }
 
-
-/* 全般設定 */
-body{
-	background: var(--z-preset-checker-blue);
-}
-body,
-div#container {
-	padding: 0;
-	margin: 0;
-	text-align: center;
-	font-size: large;
-	color: var(--z-fontcolor);
-}
 
 
 
